Remove JVM options that are no longer used in Java 8